<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/medium_padding"
        android:paddingLeft="@dimen/medium_padding"
        android:paddingRight="@dimen/medium_padding"
        android:orientation="vertical"
        android:paddingTop="@dimen/larg_top_padding"
        >

        <samuel.example.com.intcore.custom.STextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_provider"
            android:gravity="center_horizontal"
            android:textColor="@color/head_textColor"
            android:textSize="@dimen/head_text_size"
            android:layout_marginBottom="@dimen/margin_Bottom"

            />
        <samuel.example.com.intcore.custom.STextView
            android:textColor="@color/textColor"
            android:layout_marginBottom="@dimen/margin_Bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/large_text"
            />
        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingRight="@dimen/small_medium_padding"
                >

                <samuel.example.com.intcore.custom.STextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/str1"
                    android:textColor="@color/textColor"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                android:src="@drawable/profile_category_icon" />
        </LinearLayout>

        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <samuel.example.com.intcore.custom.STextView
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:text="@string/str2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                android:src="@drawable/profile_category_icon" />
        </LinearLayout>

        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <samuel.example.com.intcore.custom.STextView
                    android:textSize="@dimen/normal_text_size"
                    android:padding="@dimen/small_padding"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:text="@string/str3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <ImageView
                android:src="@drawable/profile_category_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                />
        </LinearLayout>

        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <samuel.example.com.intcore.custom.STextView
                    android:textSize="@dimen/normal_text_size"
                    android:padding="@dimen/small_padding"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:text="@string/str4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <ImageView
                android:src="@drawable/profile_category_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                />
        </LinearLayout>

        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <samuel.example.com.intcore.custom.STextView
                    android:textSize="@dimen/normal_text_size"
                    android:padding="@dimen/small_padding"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:text="@string/str5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <ImageView
                android:src="@drawable/profile_category_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                />
        </LinearLayout>
        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:padding="@dimen/small_padding"
                    android:id="@+id/text1"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <ImageView
                android:src="@drawable/profile_category_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                />
        </LinearLayout>

        <!-- ////////////////////////////////////// -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:padding="@dimen/small_padding"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:id="@+id/text2"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <ImageView
                android:src="@drawable/profile_category_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                />
        </LinearLayout>
        <!-- ////////////////////////////////////// -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:paddingRight="@dimen/small_medium_padding"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <samuel.example.com.intcore.custom.STextView
                    android:padding="@dimen/small_padding"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@color/textColor"
                    android:gravity="right"
                    android:text="@string/str8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginBottom="@dimen/small_padding"
                    android:layout_marginTop="@dimen/small_padding"
                    android:background="@color/lineColor"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <ImageView
                android:src="@drawable/profile_category_icon"
                android:layout_width="@dimen/small_icon"
                android:layout_height="@dimen/small_icon"
                />

        </LinearLayout>
        <!-- ////////////////////////////////////// -->

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rating="4"
            android:stepSize="1"
            android:numStars="5"
            android:theme="@style/RatingBar"
            />

        <Button
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hight"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/button_string"
            android:textAllCaps="false"
            android:textSize="@dimen/normal_text_size"

            />

    </LinearLayout>
</android.support.v7.widget.CardView>
